TAG: uniprotload-6-0-11-2
DATE: 11/01/2017
STAFF: sc
CHANGES: TR12627 - add processing of ldb column in input file

TAG: uniprotload-6-0-11-1
DATE: 10/11/2017
STAFF: sc
CHANGES: merge tr12624 branch to master
1) makeBuckets.py - added loading of the N:1 bucket

TAG: uniprotload-tr12624-BP
DATE: 09/27/2017
STAFF: sc
CHANGES: Branch Point tag for loading of N-1 bucket

TAG: uniprotload-6-0-10-1
DATE: 08/02/2017
STAFF: lec 
CHANGES:
1) TR12624/handle Ensembl issue in "DR" tag
see TR for complete details
#       modified:   bin/UniProtParser.py

TAG: uniprotload-6-0-7-1
DATE: 01/05/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: uniprotload-6-0-6-1
DATE: 12/19/2017
STAFF: lec
CHANGES:
TR12490/remove obsolete qc reports
#	modified:   Install
#	modified:   bin/makeBuckets.py
#	modified:   bin/uniprotload.sh
#	modified:   index.html
#	modified:   uniprotload.config.default
#	deleted:    bin/makeBucketsDiff.py
#	deleted:    bin/makeBucketsDiff.sh
#	deleted:    bin/makeSwissDiffFile.py
#	deleted:    bin/makeSwissDiffFile.sh

TAG: uniprotload-6-0-5-3
TAG: uniprotload-6-0-5-2
DATE: 09/27/2016
STAFF: lec
CHANGES:
TR12240/modificaiton to EC2GO
makeGOAnnot.py
exclude EC ids with "-" (dash)

TAG: uniprotload-6-0-5-1
DATE: 09/01/2016
STAFF: lec 
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key != 2  changed to "= 1"

TAG: uniprotload-6-0-4-4
DATE: 06/15/2016
STAFF: sc
CHANGES: but in overrideQC.py query for sequence object in MGI must lower
a.accid to find the uniprot accession id

TAG: uniprotload-6-0-4-3
TAG: uniprotload-6-0-4-2
TAG: uniprotload-6-0-4-1
DATE: 04/27/2016, 05/09/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"

TAG: uniprotload-6-0-3-1
DATE: 03/23/2016
STAFF: lec
CHANGES: removed comments regarding old max length values for note chunks

TAG: uniprotload-6-0-2-1
DATE: 01/27/2016
STAFF: sc
CHANGES: TR12218 curator overrides (part of project TR11937)
