@@ -113,6 +113,12 @@ then
 fi
 
 #
+# Convert the input file into a QC-ready version that can be used to run
+# the sanity/QC reports against.
+#
+dos2unix ${INPUT_FILE} ${INPUT_FILE} 2>/dev/null
+
+#
 # Initialize the log file.
 #
 LOG=${QC_LOGFILE}
